--- a/package.json
+++ b/package.json
@@ -14,5 +14,10 @@
         "express": "^4.17.1",
         "request": "^2.88.2",
         "yargs": "^16.2.0"
+    },
+    "devDependencies": {
+        "eslint": "^7.20.0",
+        "eslint-config-airbnb-base": "^14.2.1",
+        "eslint-plugin-import": "^2.22.1"
     }
 }
